<resources>
    <string name="app_name">SiapaBisa</string>
    <string name="intro">Kamu Bisa? Ayo Gabung Sekarang!</string>
    <string name="login">Masuk</string>
    <string name="register">Daftar</string>
    <string name="password_text">Password</string>
    <string name="login_text">Masuk</string>
    <string name="username_text">Username</string>
    <string name="register_text">Daftar</string>
    <string name="name_text">Nama Lengkap</string>
    <string name="birthdate_text">Tanggal Lahir</string>
    <string name="birthdate_field">00 - 00 - 0000</string>
    <string name="choose_date">Tanggal</string>
    <string name="location_text">Domisili</string>
    <string name="address_text">Alamat</string>
    <string name="confirm_password_text">Konfirmasi Password</string>
    <string name="register_user_text">Daftar Sebagai Pelamar</string>
    <string name="register_usaha_text">Daftar Sebagai Usaha</string>
    <string name="text_home">utama</string>
    <string name="text_saved">tersimpan</string>
    <string name="text_notification">notifikasi</string>
    <string name="text_akun">akun</string>
    <string name="job_picture">Foto Lowongan</string>
    <string name="jobdesc_text">Job Description</string>
    <string name="job_place_text">Perusahaan</string>
    <string name="job_location_text">Location</string>
    <string name="akun_text">Pengaturan Akun</string>
    <string name="pendidikan_terakhir">Pendidikan Terakhir</string>
    <string name="pengalaman_text">Pengalaman</string>
    <string name="keterampilan_text">Keterampilan</string>
    <string name="peminatan_text">Peminatan</string>
    <string name="deskripsi_text">Deskripsi Diri</string>
    <string name="change_biodata">Ubah Data Diri</string>
    <string name="email_text">Alamat Email</string>
    <string name="logout_text">Keluar</string>
    <string name="search_text">Cari Pekerjaan</string>
    <string name="rekomendasi_text">Rekomendasi</string>
    <string name="lihat_semua_text">Lihat Semua</string>
    <string name="category_text">kategori</string>
    <string name="company_logo">Company Logo</string>
    <string name="company_name">Company Name</string>
    <string name="message_text">Message Text</string>
    <string name="job_date_text">Posted</string>
    <string name="saved_text">Tersimpan</string>
    <string name="notification_text">Notifikasi</string>
    <string name="job_time_text">Time</string>
    <string name="text_usaha_saya">Lowongan Saya</string>
    <string name="isi_data_diri">Isi Data Diri</string>
    <string name="simpan_text">Simpan</string>
    <string name="loker_saya">Loker Saya</string>
    <string name="text_no_data">Belum ada lowongan</string>
    <string name="buat_loker">Buat Lowongan</string>
    <string name="text_detail_loker">Detail Lowongan</string>
    <string name="nama_perusahaan">Company Name</string>
    <string name="address">Lokasi :</string>
    <string name="descriptionjob">Jenis Lowongan :</string>
    <string name="descriptionposition">kami membutuhkan karyawan untuk Posisi :</string>
    <string name="position">posisi</string>
    <string name="requirement">Syarat :</string>
    <string name="min_requirement">pendidikan :</string>
    <string name="experience">Pengalaman :</string>
    <string name="postedAt_text">Diposting pada</string>
    <string name="lamar_text">Lamar</string>
    <string name="text_loker">Buka Lowongan</string>
    <string name="name_loker_text">Peran Lowongan</string>
    <string name="loker_deskripsi_text">Deskripsi Lowongan</string>
    <string name="pendidikan_loker">Minimum Pendidikan</string>
    <string name="pengalaman_loker">Minimum Pengalaman</string>
    <string name="image_from_camera">Kamera</string>
    <string name="image_from_gallery">Tambah Gambar</string>
    <string name="deskripsi_singkat">Deskripsi Singkat</string>
    <string name="jenis_loker">Jenis Lowongan</string>
    <string name="cari_text">Cari Lowongan</string>
    <string name="usaha_name_text">Nama Perusahaan</string>
    <string name="usaha_bidang_text">Bidang Usaha</string>
    <string name="usaha_deskripsi_text">Deskripsi Usaha</string>
    <string name="usaha_profil_text">Profil Usaha</string>
    <string name="keterampilan_loker">Peferensi Keterampilan</string>
    <string name="tutup_loker">Tutup Lowongan</string>
</resources>