<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.BiodataActivity">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_biodata_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/isi_data_diri"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_nama_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/name_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_name_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:boxStrokeWidth="5dp">

                <com.capstone.siapabisa.ui.custom.UsernameEditText
                    android:id="@+id/et_biodata_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_input_bg"
                    android:ems="10"
                    android:inputType="textAutoComplete"
                    android:padding="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_birthday_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/birthdate_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_birthdate_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:text="@string/birthdate_field"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/underline"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@drawable/button_primary"
                android:drawableStart="@drawable/ic_calendar"
                android:padding="8dp"
                android:text="@string/choose_date"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_alamat_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/address_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_address_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:boxStrokeWidth="5dp">

                <com.capstone.siapabisa.ui.custom.UsernameEditText
                    android:id="@+id/et_biodata_address"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_input_bg"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:minLines="3"
                    android:gravity="top"
                    android:maxLines="5"
                    android:padding="12dp"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_pendidikan_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/pendidikan_terakhir"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_pendidikan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/text_input_bg" />

            <TextView
                android:id="@+id/tv_pengalaman_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/pengalaman_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_pengalaman"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/text_input_bg" />

            <TextView
                android:id="@+id/tv_keterampilan_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/keterampilan_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_keterampilan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/text_input_bg" />

            <TextView
                android:id="@+id/tv_peminatan_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/peminatan_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Spinner
                android:id="@+id/spinner_peminatan"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/text_input_bg" />

            <TextView
                android:id="@+id/tv_deskripsi_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="18dp"
                android:text="@string/deskripsi_text"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_deskripsi_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                app:boxStrokeWidth="5dp">

                <com.capstone.siapabisa.ui.custom.UsernameEditText
                    android:id="@+id/et_biodata_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/text_input_bg"
                    android:ems="10"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:minLines="3"
                    android:gravity="top"
                    android:maxLines="5"
                    android:padding="12dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/button_primary"
                android:text="@string/simpan_text"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:padding="17dp" />


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>